--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.1.0",
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "react-native-get-location": "^2.2.1",
     "react-native-maps": "^1.0.0",
     "react-native-maps-directions": "^1.8.0"
   },
