--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
   },
   "dependencies": {
     "@react-native-community/geolocation": "^2.1.0",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.2",
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-get-location": "^2.2.1",
     "react-native-maps": "^1.0.0",
-    "react-native-maps-directions": "^1.8.0"
+    "react-native-maps-directions": "^1.8.0",
+    "react-native-reanimated": "^2.9.1",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.15.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
