--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react-native-get-location": "^2.2.1",
     "react-native-maps": "^1.0.0",
     "react-native-maps-directions": "^1.8.0",
+    "react-native-paper": "^4.12.2",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-settings": "^0.2.3",
     "react-redux": "^8.0.2",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "switch-button-react-native": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
